some packages/classes

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,9 @@
-rootProject.name = 'AutoMode'
-
+rootProject.name = 'AutoMotBot'
+repositories {
+    jcenter()
+    maven { url 'https://jitpack.io' }
+}
+dependencies {
+    compile 'net.dv8tion:JDA:3.0.0_171'
+    compile 'com.github.kaaz:configurationbuilder:c05d1a4455'
+}
