--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id'java'
-    id'application'
-    id'com.github.johnrengelman.shadow' version '1.2.4'
+    id 'java'
+    id 'application'
+    id 'com.github.johnrengelman.shadow' version '1.2.4'
 }
 
 mainClassName = 'co.automod.bot.Main'
@@ -15,7 +15,8 @@ repositories {
     maven { url 'https://jitpack.io' }
 }
 dependencies {
-    compile 'net.dv8tion:JDA:3.0.0_171'
+    compile 'net.dv8tion:JDA:3.0.0_172'
     compile 'com.github.kaaz:configurationbuilder:afbc25a5d2'
+    compile group: 'com.rethinkdb', name: 'rethinkdb-driver', version: '2.3.3'
 }
 compileJava.options.encoding = 'UTF-8'
